Added new couple of rate-limiters for limit the backend requests & replaced existing. Updated the CORS policy for only allow into the front-end url.

--- a/MechanicalInventory/appsettings.json
+++ b/MechanicalInventory/appsettings.json
@@ -29,5 +29,27 @@
   },
   "JWT": {
     "SecurityKey": "56uhgyfc%fs$gsjaidik45fsdhbjk*jhsjdj8^jsdas"
+  },
+  "RateLimit": [
+    {
+      "FixedWindow": {
+        "PolicyName": "fixed-rate-limiter",
+        "PermitLimit": 4,
+        "QueueLimit": 2,
+        "WindowTime": 12
+      }
+    },
+    {
+      "Concurrency": {
+        "PolicyName": "concurrency-limiter",
+        "PermitLimit": 4,
+        "QueueLimit": 2
+      }
+    }
+  ],
+  "CORS": {
+    "AllowAllPolicy": {
+      "PolicyName": "allow-all-origins"
+    }
   }
 }
