--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,13 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Configuration Files
+appsettings.json
+appsettings.Development.json
+appsettings.Production.json
+
+
+
 # User-specific files
 *.rsuser
 *.suo
