--- a/MechanicalInventory/MechanicalInventory.csproj
+++ b/MechanicalInventory/MechanicalInventory.csproj
@@ -9,8 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.28" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
+    <PackageReference Include="MimeKit" Version="4.3.0" />
     <PackageReference Include="Polly" Version="8.2.1" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
